# minlpkit

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  FINDINGS.md  README.md  demo.py  hooks.py  mkdocs.yml  pyproject.toml  task.md
docs/: .gitignore  .qtpdf-code-theme.typ  .qtpdf-cover-formal.typ  .qtpdf-history.typ  .qtpdf-revision-mode.typ  .qtpdf-theme-anthropic-light.tmTheme  _quarto-blog-flat.yml  _quarto-clause.yml  _quarto-engineering-note.yml  _quarto-handbook.yml  _quarto-jis-jp.yml  _quarto-minimal-mono.yml  _quarto-qtpdfx.yml  _quarto-spec-sheet.yml  _quarto-western.yml  _quarto.yml  census.en.md  census.md  gallery.en.md  gallery.md  index.en.md  index.md  manual.md  playbook.md
experiments/: acceptance.py  check_cuopt_server.py  gen_sample_catalog.py  gpu_dashboard.py  run_attribution.py  run_benders.py  run_bnp.py  run_bottleneck.py  run_census.py  run_colgen.py  run_condition.py  run_diagnose.py  run_gpu_heuristic.py  run_gpu_lp.py  run_improve_bigm.py  run_improve_linearize.py  run_improve_redcost.py  run_infeasibility.py  run_interval.py  run_mccormick.py  run_monitor.py  run_perspective.py  run_sos.py  run_stabilize.py  run_static_diag.py  run_sweep.py  run_symmetry.py  run_tree.py  run_tune.py  run_violation.py
minlpkit/: __init__.py  compare.py  frameworks.py  gpu.py  pipeline.py  render.py  transforms.py  tune.py
notebooks/: quickstart.ipynb
results/: acceptance_t1.md  acceptance_t10.md  acceptance_t2.md  acceptance_t3.md  acceptance_t4.md  acceptance_t9.md  census.csv  diagnose_facility.html  diagnose_plant.html  diagnose_uc.html  index.html  (+9 more)
(+404 files in other folders)
